# Fitness-Bot

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260420_add_workout_burned.py  20260421_muscle_group_enum.py  20260422_add_submissions.py  20260423_agent_bridge.py  20260423_workout_expansion.py  20260424_food_catalog.py  20260425_body_composition.py
bot/: __main__.py  access.py  config.py  factory.py
bot/callbacks/: factory.py
bot/filters/: __init__.py  menu.py
bot/handlers/: __init__.py  admin.py  common.py  main_menu.py  onboarding.py  profile.py  settings.py  subscription.py
bot/integrations/: food_api.py  openai_client.py
bot/keyboards/: inline.py  nutrition.py  onboarding.py  profile.py  reply.py  settings.py  stats.py  workout.py
bot/middlewares/: db.py  state_logger.py  throttle.py  user.py
bot/models/: __init__.py  agent.py  base.py  exercise.py  meal.py  product.py  recipe.py  submission.py  user.py  workout.py
bot/repositories/: agent.py  base.py  exercise.py  meal.py  product.py  recipe.py  (+3 more)
collector_bot/: __init__.py  __main__.py  factory.py  keyboards.py  states.py
context_bot/: README.md  __init__.py  __main__.py  factory.py
data/: bot.db  product_aliases.csv  products_ru.csv
docs/: DEPLOY.md  PROJECT_CONTEXT.md
scripts/: deploy.sh  seed_exercises.py  seed_food_catalog.py  seed_products.py  server_bootstrap.sh  update_project_context.py
tests/: conftest.py
(+72 files in other folders)
